bugfix: update sass styles package and fix alignments

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -12,5 +12,9 @@
 }
 
 .nextui-c-egxOLa {
-    max-width: unset;
+    max-width: unset !important;
+}
+
+.nextui-c-hhqfap-beFEYN-maxWidth-lg {
+    max-width: unset !important;
 }
