--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -1,7 +1,7 @@
 .login-modal {
     &-button {
-        background-color: #D9D9D9;
-        color           : #000000;
+        background-color: #D9D9D9 !important;
+        color           : #000000 !important;
         min-height      : 5em !important;
 
         span {
