--- a/src/components/profile-overview/ProfileOverview.scss
+++ b/src/components/profile-overview/ProfileOverview.scss
@@ -60,10 +60,6 @@
     min-height: 10% !important;
     max-height: 15% !important;
 
-    :nth-child(1) {
-      margin-bottom: .5em;
-    }
-
     :nth-child(2) {
       margin-top: .5em;
     }
