--- a/src/pages/profile/Profile.scss
+++ b/src/pages/profile/Profile.scss
@@ -29,9 +29,9 @@
         font-size: 12px !important;
 
         &-button {
-          border: 1px solid;
-          background-color: transparent;
-          color: black;
+          border: 1px solid !important;
+          background-color: transparent !important;
+          color: black !important;
 
           :focus {
             color: unset;
